@@ -1,10 +1,13 @@
 package com.finalproject.stayease.property.controller;
 
 import com.finalproject.stayease.property.entity.dto.PeakSeasonRateDTO;
+import com.finalproject.stayease.property.entity.dto.PropertyRateSettingsDTO;
 import com.finalproject.stayease.property.entity.dto.createRequests.SetPeakSeasonRateRequestDTO;
+import com.finalproject.stayease.property.entity.dto.createRequests.SetPropertyRateSettingsDTO;
 import com.finalproject.stayease.property.entity.dto.listingDTOs.DailyPriceDTO;
 import com.finalproject.stayease.property.entity.dto.listingDTOs.RoomAdjustedRatesDTO;
 import com.finalproject.stayease.property.service.PeakSeasonRateService;
+import com.finalproject.stayease.property.service.PropertyRateSettingsService;
 import com.finalproject.stayease.responses.Response;
 import com.finalproject.stayease.users.entity.Users;
 import com.finalproject.stayease.users.service.UsersService;
@@ -35,6 +38,7 @@ import org.springframework.web.bind.annotation.RestController;
 public class RatesController {
 
   private final PeakSeasonRateService rateService;
+  private final PropertyRateSettingsService propertyRateSettingsService;
   private final UsersService usersService;
 
   @GetMapping
@@ -48,7 +52,8 @@ public class RatesController {
         .map(PeakSeasonRateDTO::new)
         .sorted(Comparator.comparing(PeakSeasonRateDTO::getRateId))
         .toList();
-    log.info("Current Rates: " + currentRatesDTO.getFirst());
+    log.info(
+        "Current Rates: " + (currentRatesDTO != null && !currentRatesDTO.isEmpty() ? currentRatesDTO.get(0) : null));
     return Response.successfulResponse(200,
         "Listing all current rates for tenant: " + tenant.getTenantInfo().getBusinessName(), currentRatesDTO);
   }
@@ -104,15 +109,43 @@ public class RatesController {
     PeakSeasonRateDTO response = new PeakSeasonRateDTO(rateService.updatePeakSeasonRate(tenant, rateId, requestDTO));
     log.info("Updated Rate: " + response);
     return Response.successfulResponse(HttpStatus.CREATED.value(), "Adjustment Rate Successfully Updated!",
-       response);
+        response);
   }
 
   // Region - DELETE Requests
   @DeleteMapping("/{rateId}")
   public ResponseEntity<Response<String>> deletePeakSeasonRate(@PathVariable Long rateId) {
     Users tenant = usersService.getLoggedUser();
-    rateService.deletePeakSeasonRate(tenant, rateId);
-    return Response.successfulResponse(HttpStatus.OK.value(), "Adjustment Rate Successfully Deleted!", "Deleted rate ID: " + rateId);
+    rateService.removePeakSeasonRate(tenant, rateId);
+    return Response.successfulResponse(HttpStatus.OK.value(), "Adjustment Rate Successfully Deleted!",
+        "Deleted rate ID: " + rateId);
+  }
+
+
+  // End - Property Rates Settings
+  @GetMapping(value = "/auto", params = {"propertyId"})
+  @PreAuthorize("hasRole('TENANT')")
+  public ResponseEntity<Response<PropertyRateSettingsDTO>> getPropertyRateSettings(@RequestParam Long propertyId) {
+    return Response.successfulResponse(HttpStatus.OK.value(), "Property Rate Settings Retrieved Successfully!",
+        new PropertyRateSettingsDTO(propertyRateSettingsService.getOrCreatePropertyRateSettings(propertyId)));
+  }
+
+  @PutMapping(value = "/auto", params = {"propertyId"})
+  @PreAuthorize("hasRole('TENANT')")
+  public ResponseEntity<Response<PropertyRateSettingsDTO>> updatePropertyRateSettings(@RequestParam Long propertyId,
+      @RequestBody SetPropertyRateSettingsDTO request) {
+    log.info("Updating property rate settings for property ID: " + propertyId);
+    return Response.successfulResponse(HttpStatus.OK.value(), "Property Rate Settings Updated Successfully!",
+        new PropertyRateSettingsDTO(propertyRateSettingsService.updatePropertyRateSettings(propertyId, request)));
+  }
+
+  @DeleteMapping(value = "/auto", params = {"propertyId"})
+  @PreAuthorize("hasRole('TENANT')")
+  public ResponseEntity<Response<String>> deactivateAutoRates(@RequestParam Long propertyId) {
+    propertyRateSettingsService.deactivateAutoRates(propertyId);
+    log.info("Deactivated auto rates for property ID: " + propertyId);
+    return Response.successfulResponse(HttpStatus.OK.value(), "Property Rate Settings Deactivated Successfully!",
+        "Deactivated settings for property ID: " + propertyId);
   }
 
 }
